--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,4 +1,19 @@
+/* Filter */
 .filter {
-    color: #f00;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    margin: 1rem;
+    border-bottom: 0.1rem #c0c0c0 solid;
+  }
+  
+.filter div {
+    flex: 1;
+}
+
+.items-in-cart {
+    cursor: pointer;
+    border-radius: 3px;
+    background-color: plum;
 }
 
