--- a/src/components/DressItem/Product.css
+++ b/src/components/DressItem/Product.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 100%;
+    /* height: 100%; */
     padding-left: 1rem;
 }
 
