--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -14,6 +14,7 @@
 .items-in-cart {
     cursor: pointer;
     border-radius: 3px;
-    background-color: plum;
+    background-color: #2F4F4F;
+    color: #fff;
 }
 
