--- a/src/components/Oders/Orders.css
+++ b/src/components/Oders/Orders.css
@@ -4,7 +4,7 @@
 
 .order-row {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     padding: 10px;
 }
 
