--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ header {
   background-color: #203040;
   color: #fff;
   display: flex;
+  justify-content: center;
   align-items: center;
   padding: 0.5rem;
 }
